update: atualizado versão do spring para 3 e ajustado novas dependências